--- a/csc300x-Web Pages/homePage.html
+++ b/csc300x-Web Pages/homePage.html
@@ -2,11 +2,45 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Title</title>
+<title>Shanny Delights</title>
 <link rel="stylesheet" href="homePage.css" />
 </head>
 <body>
 <div id="container">
+
+    <header>
+    <!-- Nav1: Name, Logo , Search, Login, shopping cart -->
+<nav id = nav1></nav>
+    <!-- Nav2: Home, Shop, About Me, Contact, Soical media- Facebook, Youtube, Instagram (all Text with links to pages)  -->
+<nav id = nav2></nav>
+</header>
+
+<!-- good pic with text depecting solgon or small summary with a shop now button (make it look good)-->
+<splash> </splash>
+
+<!--Best Sellers with some text  -->
+<div id=" BestSeller">
+<p></p>
 </div>
+
+<!-- 3 individual div flexed into the section pic off product with price with link to their own page-->
+<section></section>
+
+<!-- Line break with link to all cookies page -->
+<div></div>
+
+<!-- IDK section maybe review or specialty products (Make sothing up) -->
+<section></section>
+
+<!-- Serives more infomation like Pickup, Deliver, Setup -->
+<section></section>
+
+<!-- Flex 4 columns and and a alone p under  Columns include Shop, hours, Addres, SignUp  p include copyright-->
+<footer></footer>
+
+</div>
+
+
+
 </body>
 </html>
