--- a/csc300x-Web Pages/homePage.html
+++ b/csc300x-Web Pages/homePage.html
@@ -10,8 +10,16 @@
 
     <header>
     <!-- Nav1: Name, Logo , Search, Login, shopping cart -->
-<nav id = nav1></nav>
-    <!-- Nav2: Home, Shop, About Me, Contact, Soical media- Facebook, Youtube, Instagram (all Text with links to pages)  -->
+<nav id = "nav1"> 
+    <div id = "name"> 1</div>
+    <div id = "search">2</div>
+    <div id = "login">3</div>
+    <div id = ShoppingCart>4</div>
+</nav>
+    
+
+
+<!-- Nav2: Home, Shop, About Me, Contact, Soical media- Facebook, Youtube, Instagram (all Text with links to pages)  -->
 <nav id = nav2></nav>
 </header>
 
