--- a/csc300x-Web Pages/homePage.html
+++ b/csc300x-Web Pages/homePage.html
@@ -8,6 +8,8 @@
 <body>
 <div id="container">
 
+
+    <!-- Trinity Boler -->
     <header>
     <!-- Nav1: Name, Logo , Search, Login, shopping cart -->
 <nav id = "nav1"> 
@@ -25,6 +27,9 @@
 
 <!-- good pic with text depecting solgon or small summary with a shop now button (make it look good)-->
 <splash> </splash>
+
+
+<!-- Raven Griffen -->
 
 <!--Best Sellers with some text  -->
 <div id=" BestSeller">
